dropdown-menu: Remove caret-down icon and fix alignment.
The alignment on narrow windows is also off.  We fix
this spacing issue while we're at it.

--- a/static/styles/right-sidebar.scss
+++ b/static/styles/right-sidebar.scss
@@ -159,7 +159,7 @@
     background-color: hsl(0, 0%, 89%);
     color: hsl(0, 0%, 52%);
     display: block;
-    width: 40px;
+    width: 45px;
     height: 19px;
     padding-top: 12px;
     padding-bottom: 9px;
